--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-material-design-icons": "^5.2.0",
     "vue-pwa-asset-generator": "^1.7.3",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.3.9"
+    "vuetify": "^3.3.9",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -30,6 +31,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
