--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
